tests/baselines/reference/stringLiteralsWithSwitchStatements02(strict=true).errors.txt
stringLiteralsWithSwitchStatements02.ts(5,5): error TS2454: Variable 'x' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(5,10): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(6,14): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(7,5): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(8,5): error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
stringLiteralsWithSwitchStatements02.ts(10,5): error TS2454: Variable 'x' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(10,10): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(11,14): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(12,5): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements02.ts(13,5): error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.


==== stringLiteralsWithSwitchStatements02.ts (10 errors) ====
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x == y;
        ~
!!! error TS2454: Variable 'x' is used before being assigned.
             ~
!!! error TS2454: Variable 'y' is used before being assigned.
    b = "foo" == y
                 ~
!!! error TS2454: Variable 'y' is used before being assigned.
    b = y == "foo";
        ~
!!! error TS2454: Variable 'y' is used before being assigned.
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
    
    b = x != y;
        ~
!!! error TS2454: Variable 'x' is used before being assigned.
             ~
!!! error TS2454: Variable 'y' is used before being assigned.
    b = "foo" != y
                 ~
!!! error TS2454: Variable 'y' is used before being assigned.
    b = y != "foo";
        ~
!!! error TS2454: Variable 'y' is used before being assigned.
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
    
    